--- a/mbd_cdn_blog_viewer_2024_V1.0.html
+++ b/mbd_cdn_blog_viewer_2024_V1.0.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<title>Blog Name Here</title>
+<script src="https://kit.fontawesome.com/0ca27f8db1.js" crossorigin="anonymous"></script>
+<meta charset="UTF-8">
+<link rel="icon" type="image/x-icon" href="https://mbd-blog-cdn.madebydanny.uk/icon.png">
+<link rel="stylesheet" href="/Style/index.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <style>
 * {
   box-sizing: border-box;
@@ -9,48 +16,56 @@
 body {
   font-family: Arial;
   padding: 10px;
-  background: #f1f1f1;
+  background: #cbacf6;
 }
 
 /* Header/Blog Title */
 .header {
   padding: 10px;
   text-align: center;
-  background: white;
-      position: sticky;
-    position: -webkit-sticky;
-    top: 0;
+  background: #f37362;
 }
 
 .header h1 {
   font-size: 50px;
 }
 
-/* Style the top navigation bar */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-      position: sticky;
+  /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
+  .navbar {
+    overflow: hidden;
+    background-color: #666;
+    position: sticky;
     position: -webkit-sticky;
     top: 0;
-}
-
-/* Style the topnav links */
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Change color on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
+  }
+  
+  /* Style the navigation bar links */
+  .navbar a {
+    float: left;
+    display: block;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+    color: #f1f1f1;
+  }
+  
+  
+  /* Right-aligned link */
+  .navbar a.right {
+    float: right;
+  }
+  
+  /* Change color on hover */
+  .navbar a:hover {
+    background-color: #f37362;
+    color: black;
+  }
+  
+  /* Active/current link */
+  .navbar a.active {
+    background-color: #1ab;
+    color: white;
+  }
 /* Create two unequal columns that floats next to each other */
 /* Left column */
 .leftcolumn {   
@@ -62,7 +77,7 @@ body {
 .rightcolumn {
   float: left;
   width: 25%;
-  background-color: #f1f1f1;
+  background-color: #cbacf6;
   padding-left: 20px;
 }
 
@@ -91,7 +106,7 @@ body {
 .footer {
   padding: 20px;
   text-align: center;
-  background: #ddd;
+  background: #1ab;
   margin-top: 20px;
 }
 
@@ -110,20 +125,119 @@ body {
     width: 100%;
   }
 }
+.dropdown {
+    float: right;
+    overflow: hidden;
+  
+  }
+  
+  .dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+    
+  }
+  
+  .navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: #fe7362;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+  }
+
+  #myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #fe7362; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #cbacf6; /* Add a dark-grey background on hover */
+  }
+  #more {display: none;}
+  #myBtn2 {
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #fe7362; /* Set a background color */
+    color: white; /* Text color */
+    padding-bottom: 10px;
+  }
+  #myBtn2:hover {
+    background-color: #cbacf6; /* Add a dark-grey background on hover */
+  }
 </style>
 </head>
 <body>
 
 <div class="header">
-  <h1>My Website</h1>
-  <p>Resize the browser window to see the effect.</p>
+  <h1>MBD Blog Layout V1.0</h1>
+  <p>MBD CDN Blog Viewer 2024 V1.0 | Powerd By MBD CDN</p>
 </div>
+<div class="navbar">
+  <a href="https://madebydanny.uk"><i class="fa-solid fa-arrow-left"></i>MBD</a>
+  <a href="https://blog.madebydanny.uk/index.html"><i class="fa-solid fa-house"></i>Home</a>
+  <a href="https://blog.madebydanny.uk/about.html"><i class="fa-solid fa-user"></i>About Me</a>
+  <a class="active" href="https://blog.madebydanny.uk/post.html"><i class="fa-solid fa-newspaper"></i>All Post</a>
+  <a href="https://blog.madebydanny.uk/search.html"><i class="fa-solid fa-magnifying-glass"></i>Search</a>
+  <div class="dropdown">
+    <button class="dropbtn"><i class="fa-solid fa-screwdriver-wrench"></i>Google Translate 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a><div id="google_translate_element"></div></a>
+    </div>
+  </div> 
+  <div class="dropdown">
+    <button class="dropbtn"><i class="fa-solid fa-screwdriver-wrench"></i>Tools 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a style="float: right;" ><button id="toggleButton">Toggle Light/Dark Mode</button></a>
+      <a href="https://blog.madebydanny.uk/info.html">Site Info</a>
+      <a href="">Refresh For Newer Version<i class="fa-solid fa-arrow-rotate-right fa-spin"></i></a>
+    </div>
+  </div> 
+  
 
-<div class="topnav">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#" style="float:right">Link</a>
 </div>
 
 <div class="row">
@@ -146,8 +260,8 @@ body {
   <div class="rightcolumn">
     <div class="card">
       <h2>About Me</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      Hello, I can see that you have<br> found my little website<br> that I have coded myself.<br>
+        My name is Danny that is why the <br>site is called "Made by Danny".
     </div>
     <div class="card">
       <h3>Popular Post</h3>
@@ -163,9 +277,67 @@ body {
 </div>
 
 <div class="footer">
-  <h2>Footer</h2>
+  <h2>MBD CDN</h2>
+  <p>Powerd By MBD CDN | Backed By Cloudflare | Hosted in Github Pages | Copright 2024 MBD Team</p>
 </div>
+<script>
+  let mybutton = document.getElementById("myBtn");
 
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0; // For Safari
+  document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+}
+document.addEventListener('DOMContentLoaded', () => {
+  const toggleButton = document.getElementById('toggleButton');
+  toggleButton.addEventListener('click', () => {
+      document.body.classList.toggle('dark-mode');
+      document.body.classList.toggle('light-mode');
+  });
+
+  // Set initial mode based on user's preference or default to light mode
+  if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      document.body.classList.add('dark-mode');
+  } else {
+      document.body.classList.add('light-mode');
+  }
+});
+function myFunction() {
+  var dots = document.getElementById("dots");
+  var moreText = document.getElementById("more");
+  var btnText = document.getElementById("myBtn");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read more"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read less"; 
+    moreText.style.display = "inline";
+  }
+}
+</script>
+<script src="/Javascript/index.js"></script>
+
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+  }
+  </script>
+  
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
 
