--- a/pptx/ubuntu_24_lts.html
+++ b/pptx/ubuntu_24_lts.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <script src="https://kit.fontawesome.com/0ca27f8db1.js" crossorigin="anonymous"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/x-icon" href="https://mbduk-cdn.madebydanny.uk/a28a3c50-3e92-47f6-adea-b62eccd07ecd.png">
 <style>
 * {
   box-sizing: border-box;
