Fixed Layout for pptx

--- a/pptx/ubuntu_24_lts.html
+++ b/pptx/ubuntu_24_lts.html
@@ -259,7 +259,7 @@ body {
   <div class="main">
      <h2>Ubuntu 24 LTS</h2>
      <h5>Hardware | Offical</h5>
-     <p><span id="dots">#// A quick summery of this blog</span><span id="more">My birthday was last (Aug. 23) week one of the gifts I got was the Fitbit Charge 6.<br> I have had a Fitbit before (the Charge 5) over time the battery started to lose its charge <br>to the point where the battery stopped being able to keep a charge that was a year ago</span></p>
+     <p><span id="dots">Learn More About This Awsome PowerPoint</span><span id="more">A awsome PowerPoint Made By Danny all about Ubuntu 24 LTS</span></p>
        <button onclick="myFunction()" id="myBtn2">Read More</button>
      <br>
      <h4>Tools</h4>
