added UniFi Flex Mini

--- a/pptx/unifi_flex_mini.html
+++ b/pptx/unifi_flex_mini.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>MBD PPTX | MBD CDN PPTX Viewer V1.0 2024</title>
+<title>UniFi Flex Mini | MBD CDN PPTX Viewer V1.0 2024</title>
 <meta charset="UTF-8">
 <script src="https://kit.fontawesome.com/0ca27f8db1.js" crossorigin="anonymous"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,29 +27,30 @@
       <a><div id="google_translate_element"></div></a>
       <a href="pptx.html"><i class="fa-solid fa-spinner fa-spin"></i>Refresh For Newer Version</a>
       <a href="info.html"><i class="fa-solid fa-wrench"></i>Version 3.1 [Stable]</a>
+      <a href="#">More Comming Soon!</a>
     </div>
   </div> 
 </div>
 
 <div class="row">
   <div class="side">
-    <iframe src="#" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://1drv.ms/p/s!AssUp-z25c6Pj4xoOUcNzGSeXO6NNg?embed=1&em=2" width="100%" height="800" frameborder="0" scrolling="no"></iframe>
   </div>
   <div class="main">
      <h2>#</h2>
      <h5>Hardware | Offical</h5>
-     <p><span id="dots">More About This Awsome PowerPoint</span><span id="more">A awsome PowerPoint Made By Danny all about</span></p>
-       <button onclick="myFunction()" id="myBtn2">Learn More</button>
+     <p><span id="dots">More About This Awsome PowerPoint</span><span id="more">A awsome PowerPoint Made By Danny all about UniFi Flex Mini</span></p>
+       <button onclick="myFunction1()" id="myBtn2">Learn More</button>
      <br>
      <h4>Tools</h4>
      <div class="vertical-menu">
-         <a href="#"><i class="fa-solid fa-file-powerpoint"></i>Open In Microsft PowerPoint</a>
+         <a href="https://1drv.ms/p/s!AssUp-z25c6Pj4xoOUcNzGSeXO6NNg?embed=1&em=2"><i class="fa-solid fa-file-powerpoint"></i>Open In Microsft PowerPoint</a>
          <a href="#"><i class="fa-solid fa-download"></i>Download</a>
      </div>
      <h4>Site Tools</h4>
      <div class="vertical-menu">
-        <a><button onclick="myFunction()"><i class="fa-solid fa-circle-half-stroke"></i>Toggle dark mode</button></a>
-        <a href="#"><i class="fa-solid fa-spinner fa-spin"></i>Refresh For Newer Version</a>
+      <a><button onclick="myFunction()"><i class="fa-solid fa-circle-half-stroke"></i>Toggle dark mode</button></a>
+        <a href="https://cdn.madebydanny.uk/pptx/unifi_flex_mini.html"><i class="fa-solid fa-spinner fa-spin"></i>Refresh For Newer Version</a>
         <a href="https://cdn.madebydanny.uk/info.html"><i class="fa-solid fa-wrench"></i>Version 3.1 [Stable]</a>
      </div>
   </div>
@@ -57,7 +58,6 @@
 <div class="footer">
   <h2>cdn.madebydanny.uk/mbd_pptx/mbd_cdn_pptx_viewer_v1.0_2024.html</h2>
 </div>
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 <script src="/pptx/layout/mbd_cdn_pptx_js_script.js"></script> 
 <script type="text/javascript">
     function googleTranslateElementInit() {
